fix: Added missing JSON-LD contexts